# bz_multi

./: WORKSPACE.bazel
.github/workflows/: main.yml
projects/calculator/: BUILD.bazel  calculator.py  calculator_test.py
projects/go_hello_world/: BUILD.bazel  hello_world_test.go
projects/my-phyton-app/: BUILD.bazel  main.py
projects/projectA/: BUILD.bazel
